[project]
name = "rapidhrv"
version = "0.2.8"
description = "A package for preprocessing, analyzing and visualizing cardiac data"
authors = [
  { name = "Peter Kirk", email = "p.kirk@ucl.ac.uk"   },
  { name = "Alexander Davidson Bryan",email = "alxdb@pm.me" },
]
license = "MIT"
readme = "README.md"

dependencies = [
	     "numpy>=2.3.2",
	     "scipy>=1.16.1",
	     "scikit-learn>=1.7.1",
	     "pandas>=2.3.2",	
	     "h5py>=3.3.0",
	     "dash>=3.2.0"
]

requires-python = ">= 3.11"

[project.optional-dependencies]
gui = []
cli = [
    "jupyter>=1.0.0",
    "matplotlib>=3.4.2"
]

[tool.setuptools]
packages = [ "rapidhrv", "resources", "tests"]

[tool.poe.tasks]
format = [{ cmd = "black ." }, { cmd = "isort ." }]
pytest = "pytest --cov=rapidhrv ."
test = [
  { cmd = "black --check ." },
  { cmd = "isort --check ." },
  { cmd = "flake8 ." },
  { cmd = "mypy ." },
  { ref = "pytest" },
]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 99

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
pytest = "^8.4.1"
nbstripout = "^0.8.1"
flake8 = "^7.3.0"
poethepoet = "^0.37.0"
pytest-cov = "^6.2.1"

[tool.poetry.extras]
notebooks = ["jupyter", "matplotlib"]

